...
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_01_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
...
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_02_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
...
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_03_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
...
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_04_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
...
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username_05_textinput"
                                android:layout_width="308dp"
                                android:layout_height="40dp"
                                android:paddingVertical="2dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:importantForAutofill="no"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/confirm_button"
                            android:layout_width="311dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="@color/button_color"
                            android:fontFamily="@font/poppins"
                            android:text="@string/confirm_button_text"
...
