...
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                >

                <ImageView
                    android:id="@+id/player_like_button"
                    android:layout_width="18.24dp"
                    android:layout_height="18.66dp"
                    android:layout_gravity="left"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/alt_playerUsername"
                    android:clickable="true"
...
